# Lazarus

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  lazarus-design-doc.md  pyproject.toml
.github/workflows/: ci.yaml
deploy/: configmap.yaml  crd.yaml  deployment.yaml  kind-config.yaml  namespace.yaml  rbac.yaml  servicemonitor.yaml
docs/: installation.md  usage.md
examples/: database-restore-test.yaml  microservices-restore-test.yaml  simple-restore-test.yaml
helm/lazarus/: Chart.yaml  values.yaml
helm/lazarus/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  rbac.yaml  service.yaml  servicemonitor.yaml
scripts/: quickstart.sh  setup-dev.sh
src/lazarus_operator/: __init__.py  config.py  handlers.py  logger.py  metrics.py  notifications.py  smoke_test.py  utils.py  velero_client.py
tests/: conftest.py  test_integration.py  test_smoke_test.py  test_utils.py  test_velero_client.py
