[tool.poetry]
name = "lazarus-operator"
version = "0.1.0"
description = "Kubernetes operator for automated backup recovery validation with Velero"
authors = ["Rajesh Ramesh <rramesh17993@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/yourusername/lazarus-operator"
repository = "https://github.com/yourusername/lazarus-operator"
keywords = ["kubernetes", "operator", "backup", "disaster-recovery", "velero", "sre"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Archiving :: Backup",
]

[tool.poetry.dependencies]
python = "^3.11"
kopf = "^1.37.1"
kubernetes = "^28.1.0"
prometheus-client = "^0.19.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
structlog = "^24.1.0"
httpx = "^0.26.0"
asyncpg = "^0.29.0"
aiomysql = "^0.2.0"
motor = "^3.3.2"
slack-sdk = "^3.26.0"
jinja2 = "^3.1.2"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
black = "^23.12.1"
ruff = "^0.1.9"
mypy = "^1.7.1"
pre-commit = "^3.6.0"
kubernetes-stubs = "^28.1.0"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/lazarus_operator",
    "--cov-report=html",
    "--cov-report=term-missing",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
